--- a/index3.html
+++ b/index3.html
@@ -3,6 +3,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <meta charset="utf-8">
     <title>
         资质证书查询
