--- a/index10.html
+++ b/index10.html
@@ -62,7 +62,7 @@
         </tr>
         <tr style="background-color: white;height:20px">
             <td align="right">资质范围：</td>
-            <td colspan="3"><span id="Label20">建筑工程施工总承包贰级；环保工程专业承包贰级；地基基础工程专业承包贰级；钢结构工程专业承包贰级；市政公用工程施工总承包贰级,建筑装修装饰工程专业承包贰级</span></td>
+            <td colspan="3"><span id="Label20">建筑工程施工总承包贰级；环保工程专业承包贰级；地基基础工程专业承包贰级；钢结构工程专业承包贰级；市政公用工程施工总承包贰级；建筑装修装饰工程专业承包贰级</span></td>
         </tr>
 </form>
 </body>
